[gd_scene load_steps=10 format=3 uid="uid://dcsiia4uaybre"]

[ext_resource type="Script" uid="uid://c7tjmycniga5k" path="res://scenes/combat/combat_overview.gd" id="1_fyv5f"]
[ext_resource type="PackedScene" uid="uid://cyt2oulm62q1x" path="res://scenes/combat/combat_turn_track/combat_turn_track.tscn" id="2_42sgf"]
[ext_resource type="PackedScene" uid="uid://d3g2f1jdih740" path="res://scenes/combat/combat_status/combat_status_zone.tscn" id="3_cadbe"]
[ext_resource type="PackedScene" uid="uid://bhsm5u3j33kf7" path="res://scenes/combat/combat_attack_list/combat_attack_list.tscn" id="4_7k2ag"]
[ext_resource type="Texture2D" uid="uid://bfkyjgfo8hws0" path="res://assets/combat/combat_background.png" id="5_174ev"]
[ext_resource type="PackedScene" uid="uid://coblrs3sf5tx5" path="res://scenes/combat/combat_field/combat_field_player_area.tscn" id="6_ra6ig"]
[ext_resource type="PackedScene" uid="uid://beeqjgdvafdl2" path="res://scenes/combat/combat_field/combat_field_enemy_area.tscn" id="7_umix5"]
[ext_resource type="PackedScene" uid="uid://1j5apu7yfa8a" path="res://scenes/combat/combat_attack_list/combat_attack_item.tscn" id="8_a8cve"]
[ext_resource type="Script" uid="uid://ca2bm7xm2x48i" path="res://scenes/models/turn/turn_track_data.gd" id="8_mj574"]

[node name="CombatOverview" type="Node2D"]
script = ExtResource("1_fyv5f")

[node name="CombatUI" type="CanvasLayer" parent="."]

[node name="Background" type="TextureRect" parent="CombatUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_174ev")
expand_mode = 2

[node name="CombatField" type="Control" parent="CombatUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 420.0
offset_top = 10.0
offset_bottom = -420.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PlayerArea" parent="CombatUI/CombatField" instance=ExtResource("6_ra6ig")]
layout_mode = 1
mouse_filter = 2

[node name="EnemyArea" parent="CombatUI/CombatField" instance=ExtResource("7_umix5")]
layout_mode = 1
mouse_filter = 2

[node name="PlayerStatusZone" parent="CombatUI" instance=ExtResource("3_cadbe")]
offset_left = 433.0
offset_top = 680.0
offset_right = -787.0
offset_bottom = 0.0

[node name="EnemyStatusZone" parent="CombatUI" instance=ExtResource("3_cadbe")]
offset_left = 1198.0
offset_top = 678.0
offset_right = -22.0
offset_bottom = -2.0
is_flip = true

[node name="CombatAttackList" parent="CombatUI" instance=ExtResource("4_7k2ag")]
visible = false
offset_left = 10.0
offset_top = 308.0
offset_right = -1530.0
offset_bottom = -12.0

[node name="CombatTurnTrack" parent="CombatUI" instance=ExtResource("2_42sgf")]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1020.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 120.0
grow_horizontal = 0

[node name="AttackPreview" parent="CombatUI" instance=ExtResource("8_a8cve")]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 950.0
offset_top = 142.0
offset_right = -590.0
offset_bottom = -788.0
grow_horizontal = 2
grow_vertical = 2

[node name="EndTurn" type="Button" parent="CombatUI"]
offset_left = 438.0
offset_top = 28.0
offset_right = 555.0
offset_bottom = 89.0
text = "End Turn"

[node name="TurnTrackData" type="Node" parent="."]
script = ExtResource("8_mj574")

[connection signal="gui_input" from="CombatUI/Background" to="." method="_on_background_gui_input"]
[connection signal="turn_focused" from="CombatUI/CombatTurnTrack" to="." method="preview_turn"]
[connection signal="unfocused" from="CombatUI/CombatTurnTrack" to="." method="preview_clear"]
[connection signal="pressed" from="CombatUI/EndTurn" to="." method="_on_end_turn_pressed"]
[connection signal="added_turn" from="TurnTrackData" to="CombatUI/CombatTurnTrack" method="add_turn"]
[connection signal="removed_turn" from="TurnTrackData" to="CombatUI/CombatTurnTrack" method="remove_turn"]
